--- a/readme.html
+++ b/readme.html
@@ -443,8 +443,11 @@ version of GLFW.</p>
       <code>GLFW_OPENGL_FORWARD_COMPAT</code> hints for versioned context
       creation support</li>
   <li>Added the proper DEF file to the Visual C++ DLL project file</li>
+  <li>Added a rudimentary joystick API testing example</li>
   <li>Changed all comments in public header file to plain C style</li>
+  <li>Removed all deprecated platforms</li>
   <li>[X11] Added <code>x11-distro-install</code> install target, intended for packagers</li>
+  <li>[X11] Removed support for GLX version 1.3 and below</li>
   <li>[X11] Bugfix: Misspelt struct member in XF86VidMode code path</li>
   <li>[MacOSX] Bugfix: Key repeat events were not caught on 10.5 Leopard</li>
   <li>[Win32] Bugfix: Improper use of wParam for <code>WM_SYSCOMMAND</code></li>
