--- a/readme.html
+++ b/readme.html
@@ -282,7 +282,6 @@ native version of GLFW.</p>
   <li>Removed all threading support</li>
   <li>Removed all image and texture loading support</li>
   <li>Removed all build files not related to CMake</li>
-  <li>Removed all deprecated platforms</li>
   <li>Removed D, Delphi and Lua bindings</li>
   <li>Imported CMake work from pre-3.0 branch</li>
 </ul>
@@ -294,8 +293,11 @@ native version of GLFW.</p>
       <code>GLFW_OPENGL_FORWARD_COMPAT</code> hints for versioned context
       creation support</li>
   <li>Added the proper DEF file to the Visual C++ DLL project file</li>
+  <li>Added a rudimentary joystick API testing example</li>
   <li>Changed all comments in public header file to plain C style</li>
+  <li>Removed all deprecated platforms</li>
   <li>[X11] Added <code>x11-distro-install</code> install target, intended for packagers</li>
+  <li>[X11] Removed support for GLX version 1.3 and below</li>
   <li>[X11] Bugfix: Misspelt struct member in XF86VidMode code path</li>
   <li>[MacOSX] Bugfix: Key repeat events were ignored on 10.5 Leopard</li>
   <li>[Win32] Bugfix: Improper use of wParam for <code>WM_SYSCOMMAND</code></li>
