--- a/readme.html
+++ b/readme.html
@@ -1,33 +1,12 @@
 <html>
-
 <head>
   <title>GLFW Readme File</title>
 </head>
 
 <body>
 
-<!-- TITLE -------------------------------------------------------------->
-<table border=0 cellspacing=0 cellpadding=0 width=100%>
- <tr>
-  <td width=90 valign=top align=left>
-   <a href="http://www.opengl.org/" target="_top"><img src="docs/images/opengl.gif" border="0" width="84" height="44"></a><br>
-   <a href="http://www.opensource.org/docs/definition.php" target="_top"><img src="docs/images/osicert.gif" border="0" width="72" height="60"></a>
-  </td>
-  <td align=center>
-   <font face="bookman old style,arial" size=+4><b>GLFW v2.7</b></font><br>
-   <font face="bookman old style,arial" size=+3>source distribution</font>
-  </td>
-  <td width=90 valign=top align=right>
-   &nbsp;
-  </td>
- </tr>
-</table>
+<h1>GLFW v2.7 source distribution</h1>
 
-
-<p>
-<center>
-<table border=0><tr><td>
-<b>
 <ol>
  <li><a href="#sec1">Introduction</li></a>
  <li><a href="#sec2">Compiling GLFW and the example programs</li></a>
@@ -38,9 +17,6 @@
  <li><a href="#sec7">Contacting the project</li></a>
  <li><a href="#sec8">Acknowledgements</li></a>
 </ol>
-</b>
-</td></tr></table>
-</center>
 
 <p><hr>
 
@@ -92,14 +68,14 @@ DLL will also be compiled.</p>
   <li>Apple GCC on Mac OS X</li>
 </ol>
 
-<p>If your compiler/system is not in the list, you will have to create new
+<p>If your compiler/system is not in the list, you may have to create new
 makefiles in the <b>lib\win32</b>, <b>lib/x11</b> or <b>lib/macosx</b>
 directory, and in the <b>examples</b> directory. If you have any problems,
-please use our support forum and bug tracker on SourceForge.net. We would like
-to add support for more compilers and verify that GLFW compiles under as many
-systems as possible, so if you had to make any modifications or additions to
-the source and/or makefiles in order to make GLFW compile successfully, we
-would like to know what you had to do.</p>
+please use our support forum and bug tracker on
+<a href="http://sourceforge.net/projects/glfw/">SourceForge.net</a>. We would
+like to support as many systems as possible, so if you had to make any
+modifications or additions to the source and/or makefiles in order to make GLFW
+compile successfully, we would very much like to know what you had to do.</p>
 
 
 <h3>2.1 Microsoft Visual C++ 9.0 and above</h3>
@@ -130,7 +106,7 @@ Files\Microsoft Developer Studio\VC98', then you should be able to compile GLFW
 with this procedure:</p>
 
 <ol>
-  <li>Start a command prompt (MS-DOS prompt)</li>
+  <li>Start a command prompt (cmd.exe)</li>
   <li>"CD" to the directory where you unzipped the GLFW source
       distribution (where this readme file is located)</li>
   <li>Type <b>&quot;C:\Program Files\Microsoft Developer
@@ -842,21 +818,15 @@ version of GLFW.</p>
 <table border=0 cellspacing=0>
 <tr valign="top"><td width=100><b>docs</b></td><td>&nbsp;</td><td>GLFW manuals in PDF format</td></tr>
 <tr valign="top"><td><b>examples</b></td><td>&nbsp;</td><td>Several example programs in C</td></tr>
-<tr valign="top"><td><b>images</b></td><td>&nbsp;</td><td>Images for this HTML document</td></tr>
 <tr valign="top"><td><b>include</b></td><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;GL</b></td><td>&nbsp;</td><td>Here is the GLFW C/C++ include file</td></tr>
 <tr valign="top"><td><b>lib</b></td><td>&nbsp;</td><td>The source code for GLFW</td></tr>
-<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;amigaos</b></td><td>&nbsp;</td><td>AmigaOS specific implementation (obsoleted)</td></tr>
-<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;dos</b></td><td>&nbsp;</td><td>DOS specific implementation (obsoleted)</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;macosx</b></td><td>&nbsp;</td><td>Mac OS X specific implementation</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;win32</b></td><td>&nbsp;</td><td>Windows specific implementation</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;x11</b></td><td>&nbsp;</td><td>Unix/X11 specific implementation</td></tr>
 <tr valign="top"><td><b>support</b></td><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;d</b></td><td>&nbsp;</td><td>D support</td></tr>
-<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;delphi</b></td><td>&nbsp;</td><td>Delphi support</td></tr>
-<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;lua</b></td><td>&nbsp;</td><td>Lua support</td></tr>
-<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;masm</b></td><td>&nbsp;</td><td>MASM32 support</td></tr>
-<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;visualbasic</b></td><td>&nbsp;</td><td>Visual Basic support</td></tr>
+<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;msvc90</b></td><td>&nbsp;</td><td>Project files for Visual C++ 9.0</td></tr>
 </table>
 
 
@@ -930,7 +900,7 @@ target="_blank">developer's mailing list</a>, or you could join us on
   remaining examples to the D language.</li><br>
 
   <li>Olivier Delannoy, for the initial implementation of FSAA support on
-  X11, cross-compiling support for MinGW and general extreme usefulness.</li>
+  X11, cross-compiling support for MinGW and general extreme usefulness.</li><br>
 
   <li>Glenn Lewis, for helping out with support for the D programming
   language.</li><br>
