--- a/readme.html
+++ b/readme.html
@@ -5,7 +5,7 @@
 
 <body>
 
-<h1>GLFW v2.7 source distribution</h1>
+<h1>GLFW 2.7 source distribution</h1>
 
 <ol>
  <li><a href="#sec1">Introduction</li></a>
