--- a/readme.html
+++ b/readme.html
@@ -8,14 +8,14 @@
 <h1>GLFW 2.7 source distribution</h1>
 
 <ol>
- <li><a href="#sec1">Introduction</li></a>
- <li><a href="#sec2">Compiling GLFW and the example programs</li></a>
- <li><a href="#sec3">Installing GLFW</li></a>
- <li><a href="#sec4">Using GLFW</li></a>
- <li><a href="#sec5">Version history</li></a>
- <li><a href="#sec6">Directory structure of the GLFW distribution</li></a>
- <li><a href="#sec7">Contacting the project</li></a>
- <li><a href="#sec8">Acknowledgements</li></a>
+ <li><a href="#sec1">Introduction</a></li>
+ <li><a href="#sec2">Compiling GLFW and the example programs</a></li>
+ <li><a href="#sec3">Installing GLFW</a></li>
+ <li><a href="#sec4">Using GLFW</a></li>
+ <li><a href="#sec5">Version history</a></li>
+ <li><a href="#sec6">Directory structure of the GLFW distribution</a></li>
+ <li><a href="#sec7">Contacting the project</a></li>
+ <li><a href="#sec8">Acknowledgements</a></li>
 </ol>
 
 <p><hr>
@@ -907,18 +907,18 @@ target="_blank">developer's mailing list</a>, or you could join us on
 
   <li>David Medlock, for doing the initial Lua port.</li><br>
 
-  <li>Frank Wille, for helping me with the AmigaOS port and making GLFW
+  <li>Frank Wille, for helping with the AmigaOS port and making GLFW
   compile under IRIX 5.3.</li><br>
 
-  <li>Matt Sealey, for helping me with the MorphOS port.</li><br>
+  <li>Matt Sealey, for helping with the MorphOS port.</li><br>
 
-  <li>Paul R. Deppe, who helped me with Cygwin support, and made an
+  <li>Paul R. Deppe, who helped with Cygwin support, and made an
   adaption of <a href="http://plib.sourceforge.net/" target="_blank">PLIB</a>
   so that it can use GLFW (instead of GLUT).</li><br>
 
   <li>Jarrod Davis, for the Delphi port of GLFW.</li><br>
 
-  <li>Toni Jovanoski, for helping me with the MASM32 port of GLFW, and
+  <li>Toni Jovanoski, for helping with the MASM32 port of GLFW, and
   supplying the example program and fixed OpenGL and GLU bindings for
   MASM32.</li><br>
 
