Added GLFW_NO_GLU macro.

--- a/readme.html
+++ b/readme.html
@@ -429,6 +429,7 @@ version of GLFW.</p>
       hints for versioned context creation</li>
   <li>Added <code>GLFW_OPENGL_FORWARD_COMPAT</code> hint for forward compatible context creation</li>
   <li>Added <code>GLFW_DEBUG_CONTEXT</code> hint for debug context creation</li>
+  <li>Added <code>GLFW_NO_GLU</code> macro for disabling the inclusion of the GLU header</li>
   <li>Added a rudimentary joystick API testing example</li>
   <li>Changed all comments in public header file to plain C style</li>
   <li>Removed all deprecated platforms</li>
@@ -927,6 +928,8 @@ target="_blank">developer's mailing list</a>, or you could join us on
   <li>Dmitri Shuralyov, Samuli Tuomola, Santi Zupancic, Sylvain
   Hellegouarch, and many others for support, bug reports and
   testing.</li><br>
+
+  <li>Дмитри Малышев, for the idea of a GLFW_NO_GLU macro.</li><br>
 
   <li><a href="http://www.opengl.org/" target="_blank">www.opengl.org</a>,
   and all the people on the discussion forums there that have provided
