Added GLFW_NO_GLU macro.

--- a/readme.html
+++ b/readme.html
@@ -292,6 +292,8 @@ native version of GLFW.</p>
       <code>GLFW_OPENGL_VERSION_MINOR</code> and
       <code>GLFW_OPENGL_FORWARD_COMPAT</code> hints for versioned context
       creation support</li>
+  <li>Added <code>GLFW_NO_GLU</code> macro for disabling the inclusion of the
+  GLU header</li>
   <li>Added the proper DEF file to the Visual C++ DLL project file</li>
   <li>Added a rudimentary joystick API testing example</li>
   <li>Changed all comments in public header file to plain C style</li>
@@ -800,6 +802,8 @@ mailing list</a>, or you could join us on <code>#glfw</code>.
   <li>Dmitri Shuralyov, Samuli Tuomola, Santi Zupancic, Sylvain
   Hellegouarch, and many others for support, bug reports and
   testing.</li><br />
+
+  <li>Дмитри Малышев, for the idea of a GLFW_NO_GLU macro.</li><br />
 
   <li><a href="http://www.opengl.org/">OpenGL.org</a>, and all the people on
   the discussion forums there that have provided help during the development of
