--- a/readme.html
+++ b/readme.html
@@ -935,6 +935,8 @@ target="_blank">developer's mailing list</a>, or you could join us on
   Hellegouarch, and many others for support, bug reports and
   testing.</li><br>
 
+  <li>Julian Squires, for finding and fixing a key repeat bug on X11.</li><br>
+
   <li>Дмитри Малышев, for the idea of a GLFW_NO_GLU macro.</li><br>
 
   <li><a href="http://www.opengl.org/" target="_blank">www.opengl.org</a>,
