Added a number of missing keys.

--- a/readme.html
+++ b/readme.html
@@ -935,6 +935,8 @@ target="_blank">developer's mailing list</a>, or you could join us on
   Hellegouarch, and many others for support, bug reports and
   testing.</li><br>
 
+  <li>TTK-Bandit, for adding many missing keys to the Win32 and X11 ports.</li><br>
+
   <li>Julian Squires, for finding and fixing a key repeat bug on X11.</li><br>
 
   <li>Дмитри Малышев, for the idea of a GLFW_NO_GLU macro.</li><br>
