Added note on Cocoa port.

--- a/readme.html
+++ b/readme.html
@@ -441,6 +441,7 @@ version of GLFW.</p>
   <li>[X11] Bugfix: Close callback was called for glfwCloseWindow</li>
   <li>[X11] Bugfix: Misspelt struct member in XF86VidMode code path</li>
   <li>[X11] Bugfix: Window decorations would not appear using Compiz on Intel hardware</li>
+  <li>[MacOSX] Added Cocoa port</li>
   <li>[MacOSX] Added Universal Binary build targets for all examples</li>
   <li>[MacOSX] Bugfix: Using the Dock or menu Quit command did not call the close callback</li>
   <li>[MacOSX] Bugfix: Key repeat events were not caught on 10.5 Leopard</li>
