--- a/readme.html
+++ b/readme.html
@@ -432,7 +432,9 @@ version of GLFW.</p>
   <li>Added <code>GLFW_NO_GLU</code> macro for disabling the inclusion of the GLU header</li>
   <li>Added a rudimentary joystick API testing example</li>
   <li>Added platform-independent pixel format selection (not used Mac OS X)</li>
+  <li>Added a number of test programs</li>
   <li>Changed all comments in public header file to plain C style</li>
+  <li>Removed the keytest example program, which was superceded by the events test</li>
   <li>Removed all deprecated platforms</li>
   <li>Removed all unsupported language bindings</li>
   <li>[X11] Added <code>x11-distro-install</code> install target, intended for packagers</li>
