--- a/readme.html
+++ b/readme.html
@@ -454,7 +454,7 @@ version of GLFW.</p>
   <li>[X11] Bugfix: Repeated keys would sometimes leak through despite key repeat being disabled</li>
   <li>[X11] Bugfix: AltGr was not reported as right Alt</li>
   <li>[X11] Bugfix: Window colormap was not freed</li>
-  <li>[X11] Bugfix: Close callback was called for glfwCloseWindow</li>
+  <li>[X11] Bugfix: Close callback was called for <code>glfwCloseWindow</code></li>
   <li>[X11] Bugfix: Misspelt struct member in XF86VidMode code path</li>
   <li>[X11] Bugfix: Window decorations would not appear using Compiz on Intel hardware</li>
   <li>[Carbon] Added Universal Binary build targets for all examples</li>
