Updates for 2.7 release.

--- a/readme.html
+++ b/readme.html
@@ -438,6 +438,7 @@ version of GLFW.</p>
   <li>Added Cocoa port for Mac OS X</li>
   <li>Added vsync to all relevant example programs</li>
   <li>Updated Pascal (formerly Delphi) bindings to support more compilers</li>
+  <li>Fixed a number of compiler warnings in the example programs</li>
   <li>OpenGL version is now only parsed once, at window creation time</li>
   <li>Changed all comments in public header file to plain C style</li>
   <li>Removed the keytest example program, which was superceded by the events test</li>
