Added bugfix note.

--- a/readme.html
+++ b/readme.html
@@ -452,6 +452,7 @@ version of GLFW.</p>
   <li>[X11] Removed support for GLX version 1.3 and below</li>
   <li>[X11] Removed unnecessary calls to XSync</li>
   <li>[X11] Bugfix: Repeated keys would sometimes leak through despite key repeat being disabled</li>
+  <li>[X11] Bugfix: Fullscreen window resizing would cause color buffer clearing without taking framebuffer objects into account</li>
   <li>[X11] Bugfix: AltGr was not reported as right Alt</li>
   <li>[X11] Bugfix: Window colormap was not freed</li>
   <li>[X11] Bugfix: Close callback was called for <code>glfwCloseWindow</code></li>
